--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2359,7 +2359,11 @@ DR_FAMD_KMEANS_CLUSTER <- as.factor(DR_FAMD_KMEANS$cluster)
 ##################################
 (DR_FAMD_VariableCorrelationCircle <- fviz_famd_var(DR_FAMD, 
                                          col.var = DR_FAMD_KMEANS_CLUSTER, 
-                                         palette = c("#0073C2FF", "#EFC000FF", "#868686FF"),
+                                         palette = c("#0073C2FF", 
+                                                     "#EFC000FF", 
+                                                     "#868686FF", 
+                                                     "#91E66EFF", 
+                                                     "#F48F5AFF"),
                                          legend.title = "Cluster") +
   labs(title = "Factor Analysis of Mixed Data : Correlation Circle",
        subtitle = "Principal Components Versus Descriptor Variable Clusters",
