--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -462,18 +462,13 @@ summary(Oscars.MFA)
 # Formulating dataset for
 # Factor Analysis of Mixed Data
 ##################################
-Oscars.FAMD <- Oscars[,c("Tomatometer_Critic",
-                        "Tomatometer_Audience",
-                        "IMDB_Critic",
-                        "IMDB_Audience",
-                        "Nominations_Total",
+Oscars.FAMD <- Oscars[,c("Nominations_Total",
                         "Nomination_SuccessRate",
+                        "Picture",
                         "Cinematography",
                         "Directing",
                         "Editing",
-                        "Screenplay",
-                        "Year",
-                        "Picture")]
+                        "Screenplay")]
 row.names(Oscars.FAMD) <- Oscars$Film
 dim(Oscars.FAMD)
 str(Oscars.FAMD)
@@ -2265,7 +2260,7 @@ str(SD_FAMD)
 ##################################
 # Performing FAMD
 ##################################
-DR_FAMD <- FAMD(SD_FAMD[,c(1:10)],
+DR_FAMD <- FAMD(SD_FAMD[,c(1:3)],
               graph = FALSE)
 
 ##################################
@@ -2349,7 +2344,7 @@ DR_FAMD_VAR$contrib
 # descriptor variables
 ##################################
 set.seed(123)
-DR_FAMD_KMEANS <- kmeans(DR_FAMD_VAR$coord, centers=5, nstart=25)
+DR_FAMD_KMEANS <- kmeans(DR_FAMD_VAR$coord, centers=2, nstart=25)
 DR_FAMD_KMEANS_CLUSTER <- as.factor(DR_FAMD_KMEANS$cluster) 
 
 ##################################
@@ -2360,10 +2355,7 @@ DR_FAMD_KMEANS_CLUSTER <- as.factor(DR_FAMD_KMEANS$cluster)
 (DR_FAMD_VariableCorrelationCircle <- fviz_famd_var(DR_FAMD, 
                                          col.var = DR_FAMD_KMEANS_CLUSTER, 
                                          palette = c("#0073C2FF", 
-                                                     "#EFC000FF", 
-                                                     "#868686FF", 
-                                                     "#91E66EFF", 
-                                                     "#F48F5AFF"),
+                                                     "#EFC000FF"),
                                          legend.title = "Cluster") +
   labs(title = "Factor Analysis of Mixed Data : Correlation Circle",
        subtitle = "Principal Components Versus Descriptor Variable Clusters",
@@ -2372,7 +2364,165 @@ DR_FAMD_KMEANS_CLUSTER <- as.factor(DR_FAMD_KMEANS$cluster)
   theme_classic() +
   theme(legend.position="top"))
 
+##################################
+# Extracting the contribution 
+# of the descriptor variables
+# for the the Top 1 and 2 principal components
+##################################
+(DR_FAMD_PCVariableContributors <- fviz_contrib(DR_FAMD, 
+                                 choice = "var", 
+                                 axes = 1:2) +
+  labs(title = "Factor Analysis of Mixed Data : Descriptor Variable Contribution",
+       subtitle = "Principal Components 1 and 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
 
+##################################
+# Testing the statistical significance
+# of the contribution 
+# of the descriptor variables
+# for the the Top 1 and 2 principal components
+##################################
+DR_FAMD_VariableContributionTest <- dimdesc(DR_FAMD, 
+                                           axes = c(1,2), 
+                                           proba = 0.05)
+
+##################################
+# Extracting the contribution 
+# of the descriptor variables
+# for the Top 1 principal component
+##################################
+(DR_FAMD_PC1VariableContributors <- fviz_contrib(DR_FAMD, 
+                                 choice = "var", 
+                                 axes = 1) +
+  labs(title = "Factor Analysis of Mixed Data : Descriptor Variable Contribution",
+       subtitle = "Principal Component 1 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Testing the statistical significance
+# of the contribution 
+# of the descriptor variables
+# for the Top 1 principal component
+##################################
+DR_FAMD_VariableContributionTest$Dim.1
+
+##################################
+# Extracting the contribution 
+# of the descriptor variables
+# for the Top 2 principal component
+##################################
+(DR_FAMD_PC2VariableContributors <- fviz_contrib(DR_FAMD, 
+                                 choice = "var", 
+                                 axes = 2) +
+  labs(title = "Factor Analysis of Mixed Data : Descriptor Variable Contribution",
+       subtitle = "Principal Component 2 Contributors",
+       x = "Descriptors") +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)))
+
+##################################
+# Testing the statistical significance
+# of the contribution 
+# of the descriptor variables
+# for the Top 2 principal component
+##################################
+DR_FAMD_VariableContributionTest$Dim.2
+
+##################################
+# Extracting the FAMD individual scores
+##################################
+DR_FAMD_IND <- get_famd_ind(DR_FAMD)
+
+##################################
+# Extracting the coordinates
+# representing the scores
+# for the individuals
+##################################
+DR_FAMD_IND$coord[,c("Dim.1","Dim.2")]
+
+##################################
+# Extracting the quality of representation
+# for the individuals
+# on the factor map 
+##################################
+DR_FAMD_IND$cos2[,c("Dim.1","Dim.2")]
+
+##################################
+# Extracting the contributions 
+# (in percentage) of the individuals
+# to the principal components
+##################################
+DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
+
+##################################
+# Extracting the correlation 
+# between the individual instances
+# and top principal components
+# for the qualitative descriptor variable
+##################################
+(DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
+             geom.ind = "text",
+             col.ind = SD_FAMD$Cinematography,
+             palette = c("#888888","#5544FF","#F18EDE"),
+             repel = TRUE, 
+             col.quali.var = "#FF0000",
+             legend.title = "Cinematography",
+             addEllipses = FALSE) +
+  labs(title = "Factor Analysis of Mixed Data : Individual Graph (Cinematography)",
+       subtitle = "Individuals by Qualitative Descriptor Variable Principal Components",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
+
+(DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
+             geom.ind = "text",
+             col.ind = SD_FAMD$Directing,
+             palette = c("#888888","#5544FF","#F18EDE"),
+             repel = TRUE, 
+             col.quali.var = "#FF0000",
+             legend.title = "Directing",
+             addEllipses = FALSE) +
+  labs(title = "Factor Analysis of Mixed Data : Individual Graph (Directing)",
+       subtitle = "Individuals by Qualitative Descriptor Variable Principal Components",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
+
+(DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
+             geom.ind = "text",
+             col.ind = SD_FAMD$Editing,
+             palette = c("#888888","#5544FF","#F18EDE"),
+             repel = TRUE, 
+             col.quali.var = "#FF0000",
+             legend.title = "Editing",
+             addEllipses = FALSE) +
+  labs(title = "Factor Analysis of Mixed Data : Individual Graph (Editing)",
+       subtitle = "Individuals by Qualitative Descriptor Variable Principal Components",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
+
+(DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
+             geom.ind = "text",
+             col.ind = SD_FAMD$Screenplay,
+             palette = c("#888888","#5544FF","#F18EDE"),
+             repel = TRUE, 
+             col.quali.var = "#FF0000",
+             legend.title = "Screenplay",
+             addEllipses = FALSE) +
+  labs(title = "Factor Analysis of Mixed Data : Individual Graph (Screenplay)",
+       subtitle = "Individuals by Qualitative Descriptor Variable Principal Components",
+       y = "Principal Component 2",
+       x = "Principal Component 1") +
+  theme_classic() +
+  theme(legend.position="top"))
 
 ```
 
