Added revisions to the configuration file
Added revisions to the configuration file

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2535,6 +2535,7 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
 
 # **2. References**
 |
+| **[Book]** [Multiple Factor Analysis by Example Using R](https://www.oreilly.com/library/view/multiple-factor-analysis/9781498786690/) by Jerome Pages
 | **[Book]** [Applied Predictive Modeling](http://appliedpredictivemodeling.com/) by Max Kuhn and Kjell Johnson
 | **[Book]** [An Introduction to Statistical Learning](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie and Rob Tibshirani
 | **[Book]** [Multivariate Data Visualization with R](http://lmdvr.r-forge.r-project.org/figures/figures.html) by Deepayan Sarkar
@@ -2573,8 +2574,12 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
 | **[Article]** [Principal Component Analysis – How PCA Algorithms Works, The Concept, Math and Implementation](https://www.machinelearningplus.com/machine-learning/principal-components-analysis-pca-better-explained/) by Selva Prabhakaran
 | **[Article]** [FAMD - Factor Analysis of Mixed Data in R: Essentials](http://sthda.com/english/articles/31-principal-component-methods-in-r-practical-guide/115-famd-factor-analysis-of-mixed-data-in-r-essentials/) by Alboukadel Kassambara
 | **[Article]** [Factor Analysis of Mixed Data Explained](https://everything.explained.today/Factor_analysis_of_mixed_data/) by Everything Explained Today Team
+| **[Article]** [Factor Analysis of Mixed Data](https://rpubs.com/nchelaru/famd) by Nancy Chelaru
 | **[Article]** [Factorial Analysis of Mixed Data](https://www.xlstat.com/en/solutions/features/factorial-analysis-of-mixed-data) by XLSTAT Team
+| **[Article]** [Factor Analysis of Mixed Data](https://medium.com/m/global-identity-2?redirectUrl=https%3A%2F%2Ftowardsdatascience.com%2Ffactor-analysis-of-mixed-data-5ad5ce98663c) by Sohel Mahmood
+| **[Article]** [FAMD: How To Generalize PCA to Categorical and Numerical Data](https://www.xlstat.com/en/solutions/features/factorial-analysis-of-mixed-data) by William Blaufuks
 | **[Publication]** [Analysis of a Complex of Statistical Variables into Principal Components](https://psycnet.apa.org/doiLanding?doi=10.1037%2Fh0071325) by Harold Hotelling (Journal of Educational Psychology)
+| **[Publication]** [Mixed Data for Factor Analysis](http://archive.numdam.org/item/RSA_2004__52_4_93_0/) by Jerome Pages (Journal of Applied Statistics)
 | **[Course]** [Applied Data Mining and Statistical Learning](https://online.stat.psu.edu/stat508/) by Penn State Eberly College of Science
 |
 |
